# Graduation_Project

./: .env.production.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: backend.yml  ci.yml
BE/: .dockerignore  CLAUDE.md  Dockerfile  main.py  pyproject.toml  seed.py
BE/agents/: graph.py  log_stream.py  state.py
BE/agents/nodes/: analyzer.py  coder.py  planner.py  researcher.py  reviewer.py  router.py  trend_analyzer.py
BE/alembic/: env.py
BE/alembic/versions/: 0001_create_initial_tables.py  0002_add_users_table.py  0003_add_papers_to_search_history.py  0004_add_user_id_to_history.py  044db88c5e82_add_is_deleted_to_search_history_and_.py  33318fedbd63_add_paper_summary_review_formulas_to_.py
BE/core/: config.py  dependencies.py
BE/crud/: analysis.py  paper.py  search_history.py
BE/models/: __init__.py  analysis.py  paper.py  search_history.py  user.py
BE/routers/: agent.py  auth.py  mypage.py  paper.py
BE/services/: agent_service.py  arxiv_service.py  auth_service.py  openalex_service.py  semantic_scholar_service.py  vector_service.py
FE/: CLAUDE.md  README.md  next.config.ts  package-lock.json  package.json  react-katex.d.ts  tsconfig.json
FE/admin-dashboard/: package.json
FE/app/: globals.css  layout.tsx  page.tsx
FE/app/admin/: layout.tsx  page.tsx
FE/lib/: api.ts
FE/store/: analysis-store.ts  auth-store.ts
deploy/: deploy.sh
deploy/env/: backend.env.example
deploy/nginx/: api.paperpilot.cloud.conf
deploy/prometheus/: prometheus.yml
(+45 files in other folders)
