[project]
name = "be"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.129.0",
    "feedparser>=6.0.12",
    "httpx>=0.28.1",
    "langchain-openai>=0.3.0",
    "langgraph>=0.4.0",
    "pydantic-settings>=2.13.1",
    "pymupdf>=1.24.0",
    "python-multipart>=0.0.20",
    "python-dotenv>=1.2.1",
    "uvicorn[standard]>=0.41.0",
    "sqlalchemy[asyncio]>=2.0.48",
    "asyncpg>=0.31.0",
    "alembic>=1.18.4",
    "chromadb>=1.5.5",
    "openai>=2.29.0",
    "bcrypt>=5.0.0",
    "pyjwt>=2.12.1",
    "email-validator>=2.2.0",
]
